# whatlang-accuracy-benchmark

./: Cargo.toml  README.md
benches/: example.rs
reports/: 2021-01-09.md  2021-01-11.md  2021-03-27.md  2022-04-22-v0-13-0.md  2022-04-22-v0-14-0.md  2022-05-07-v0-16-0.md  2022-08-30.md  2023-05-07.md  2023-05-11.md  latest.md
src/: alphabet.rs  benchmark.rs  cli.rs  main.rs  report.rs
